@@ -67,12 +67,24 @@ which scares away people.
 @end ignore
 
 @item
+The beam printing code has been completely rewritten, and now includes
+support for feathered beaming,
+
+@lilypond[ragged-right,fragment,relative=2]
+  \override Beam #'grow-direction = #LEFT
+  c16[
+    c c c
+    c c c c ] 
+@end lilypond 
+
+This feature was sponsored by Jamie Bullock.
+
+@item
 The @code{\note} markup command now also accepts note head styles.
 
 @lilypond[ragged-right,fragment,relative=2]
 c4^\markup {
   \override #'(style . triangle) \note-by-number #2 #1 #1 = 100
-
 }
 @end lilypond
 
